--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "C:/Users/neel2/Documents/github/inchworm_embedded/.pio/build/megaatmega2560/firmware.elf",
-            "toolchainBinDir": "C:/Users/neel2/.platformio/packages/toolchain-atmelavr/bin",
+            "executable": "/Users/nar/Desktop/Dsktup/Stuff/Repo/wpi/MQP/inchworm_embedded/.pio/build/megaatmega2560/firmware.elf",
+            "toolchainBinDir": "/Users/nar/.platformio/packages/toolchain-atmelavr/bin",
             "preLaunchTask": {
                 "type": "PlatformIO",
                 "task": "Pre-Debug"
@@ -24,8 +24,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "C:/Users/neel2/Documents/github/inchworm_embedded/.pio/build/megaatmega2560/firmware.elf",
-            "toolchainBinDir": "C:/Users/neel2/.platformio/packages/toolchain-atmelavr/bin",
+            "executable": "/Users/nar/Desktop/Dsktup/Stuff/Repo/wpi/MQP/inchworm_embedded/.pio/build/megaatmega2560/firmware.elf",
+            "toolchainBinDir": "/Users/nar/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart"
         }
     ]
