--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "c:/Users/JosuD/Documents/MQP/githubCode/use_this/inchworm_embedded/.pio/build/megaatmega2560/firmware.elf",
-            "toolchainBinDir": "C:/Users/JosuD/.platformio/packages/toolchain-atmelavr/bin",
+            "executable": "c:/Users/Trevor/Documents/mqp/githubCode/inchworm_embedded/.pio/build/uno/firmware.elf",
+            "toolchainBinDir": "C:/Users/Trevor/.platformio/packages/toolchain-atmelavr/bin",
             "preLaunchTask": {
                 "type": "PlatformIO",
                 "task": "Pre-Debug"
@@ -24,8 +24,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "c:/Users/JosuD/Documents/MQP/githubCode/use_this/inchworm_embedded/.pio/build/megaatmega2560/firmware.elf",
-            "toolchainBinDir": "C:/Users/JosuD/.platformio/packages/toolchain-atmelavr/bin",
+            "executable": "c:/Users/Trevor/Documents/mqp/githubCode/inchworm_embedded/.pio/build/uno/firmware.elf",
+            "toolchainBinDir": "C:/Users/Trevor/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart"
         }
     ]
